<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Weather Example App</string>

    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_viewlocation">View location</string>

    <string name="button_text_ok">OK</string>

    <string name="share_action_provider_item_title">Share</string>




    <string name="pref_location_key" translatable="true">location</string>
    <string name="pref_location_label" translatable="false">Location</string>
    <string name="pref_location_default" translatable="false">27612</string>
    <string name="pref_location_summary" translatable="true">Display weather by this postal code</string>
    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_units_label" translatable="true">Temperature Units</string>
    <string name="pref_units_summary" translatable="true">Choose the temperature unit type</string>
    <string name="pref_viewlocation_key" translatable="false">viewlocation</string>
    <string name="pref_units_default">metric</string>
    <string-array name="pref_units_choices">
        <item>Imperial</item>
        <item>Metric</item>
    </string-array>

    <string-array name="pref_units_choices_values">
        <item>imperial</item>
        <item>metric</item>
    </string-array>

    <string name="pref_units_rounding_key">prefunitsrounding</string>
    <string name="pref_units_rounding_label">Round Temperature</string>
    <string name="pref_units_rounding_summary">Round the temperature to the nearest whole number</string>




























    <!-- TODO: Remove or change this placeholder text -->


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
