<!--<?xml version="1.0" encoding="utf-8"?>-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


<PreferenceCategory
    android:title="Settings">

    <EditTextPreference
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key"
        android:summary="@string/pref_location_summary"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true"
        />


    <ListPreference
        android:title="@string/pref_units_label"
        android:key="@string/pref_units_key"
        android:summary="@string/pref_units_summary"
        android:entries="@array/pref_units_choices"
        android:entryValues="@array/pref_units_choices_values"
        android:defaultValue="@string/pref_units_default"
        android:positiveButtonText="@string/button_text_ok"
        />

    <SwitchPreference
        android:defaultValue="true"
        android:title="@string/pref_units_rounding_label"
        android:key="@string/pref_units_rounding_key"
        android:summary="@string/pref_units_rounding_summary"

        />


</PreferenceCategory>

<PreferenceCategory
            android:title="Other">

    <Preference
        android:title="@string/action_viewlocation"
        android:key="@string/pref_viewlocation_key"
        />

</PreferenceCategory>



</PreferenceScreen>